# nepta-synchronization

./: .gitattributes  .gitignore  .gitlab-ci.yml  LICENSE  MANIFEST.in  Makefile  Makefile.devel  Makefile.dist  Makefile.production  README.md  install.sh  metadata  pyproject.toml  runtest.sh  setup.cfg  setup.py  sync_client  sync_server  synchronization.service
nepta/synchronization/: __init__.py  _version.py
nepta/synchronization/client/: __init__.py  __main__.py
nepta/synchronization/server/: __init__.py  __main__.py
synchronization/: __init__.py
synchronization/client/: __main__.py
synchronization/server/: __init__.py  __main__.py
